# term-paint

./: .gitignore  README.md  paint.py  pyproject.toml
