[project]
name = "term-paint"
version = "1.0.1"
description = "CLI tool for drawing pixel art in the terminal with keyboard (WASD) controls."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argparse>=1.4.0",
    "pillow>=11.3.0",
    "typing>=3.10.0.0",
    "windows-curses>=2.4.1; sys_platform=='win32'",
]
[project.scripts]
term-paint = "paint:package"
